--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,8 +2,8 @@
 
 /* ---- RESET BASE STYLES & BODY STYLES ---- */
 * {
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
   border: none;
   font-weight: normal;
   position: relative;
@@ -19,19 +19,21 @@
 
 html,
 body {
-  width: 100%;
-  height: 100%;
   margin: 0;
 }
 
 html {
+  background-color: #d4d4d4;
   scroll-behavior: smooth;
 }
 
 body {
   min-width: 350px;
+  max-width: 1824px;
+  min-height: 100vh;
   color: #282828;
-  background-color: #d4d4d4;
+  background-color: #fbfbfb;
+  margin: 0 auto;
   line-height: 120%;
   font-family: "Montserrat", sans-serif;
   font-size: 16px;
@@ -48,19 +50,13 @@ body._lock {
 }
 
 .wrapper {
-  min-height: 100vh;
-  width: 100%;
   display: grid;
   grid-template: auto 1fr minmax(173px, auto) / 1fr;
-  background-color: #fbfbfb;
   box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.05);
   grid-template-areas:
     "header"
     "main"
     "footer";
-
-  margin: 0 auto;
-  max-width: 1824px;
 }
 
 img {
@@ -373,6 +369,7 @@ h3 {
 }
 
 /** ---- MAIN SECTION STYLES ---- **/
+
 section {
   margin: 150px 0 0;
 }
